# scpi-cpp-instrument-demo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
core/include/: FieldGrid.hpp  ScpiClient.hpp  TraceData.hpp
core/src/: FieldGrid.cpp  ScpiClient.cpp  TraceData.cpp
mock/: mock_scpi_server.py
qt-ui/: HeatmapWidget.cpp  HeatmapWidget.hpp  MainWindow.cpp  MainWindow.hpp  Surface3DWidget.cpp  Surface3DWidget.hpp  TraceWidget.cpp  TraceWidget.hpp  main_qt.cpp
scripts/: README.md  build.sh  clean.sh  configure_qt.sh  run_qt_demo.sh  use_arm_brew.sh
transport/include/: ITransport.hpp  TcpTransport.hpp
transport/src/: TcpTransport.cpp
ui/: main.cpp
